# mriqc-nidm_bidsapp

./: .dockerignore  .gitignore  Dockerfile  MANIFEST.in  README.md  Singularity  VERSION  requirements.txt  setup.cfg  setup.py
src/: __init__.py  run.py  utils.py
src/mriqc/: __init__.py  mriqc_runner.py  run.py  validators.py
src/mriqc_nidm/: json_to_csv.py  mriqc_wrapper.py  nidm_handler.py  run.py
src/mriqc_nidm/data/: __init__.py  mriqc_dictionary_v1.csv
src/nidm_converter/: __init__.py  csv_to_nidm.py  json_to_csv.py  nidm_converter.py  nidm_utils.py
src/nidm_converter/data/: __init__.py  mriqc_software_metadata.csv
tests/: test_csv_to_nidm.py  test_json_to_csv.py  test_mriqc_runner.py  test_mriqc_wrapper.py  test_nidm_converter.py  test_nidm_handler.py  test_run.py  test_run_session_handling.py
