[metadata]
name = mriqc_nidm_bidsapp
description = BIDS App for MRIQC with NIDM Output
long_description = file: README.md
long_description_content_type = text/markdown

[options]
python_requires = >=3.9

[flake8]
max-line-length = 88
extend-ignore = E203, W503

[tool:pytest]
testpaths = tests
python_files = test_*.py
